# AirplayServerDebug

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/smart/airplayserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 2CMakeLists.txt  2native-lib.cpp  CMakeLists.txt  H264Data.h  H264Decoder.cpp  H264Decoder.h  OpenSLRender.cpp  OpenSLRender.h  PcmPlayer.cpp  PcmPlayer.h  RaopServer_JNI.c  RaopServer_JNI.h  jni_raop_server.cpp  log.h  native-lib.cpp
app/src/main/cpp/common/inc/: android_jni.h
app/src/main/cpp/common/src/: android_jni.c
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: common.h
app/src/main/cpp/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/j4a/: Build.c  Build.h  j4a_allclasses.c  j4a_allclasses.h  j4a_base.c  j4a_base.h  loader.h
app/src/main/cpp/lib/: CMakeLists.txt  dnssd.c  httpd.c  httpd.h  mirror_buffer.c  raop.c  raop.h  raop_handlers.h  raop_rtp.c  raop_rtp_mirror.c  stream.h
app/src/main/cpp/mDNSResponder/mDNSShared/: dnssd_ipc.c
app/src/main/java/com/fang/myapplication/: DNSNotify.java  MyNsd.java  NetUtils.java  RaopServer.java  SocketHandleThread.java  TCPServerThread.java
app/src/main/java/com/fang/myapplication/player/: AudioPlayer.java  SkyVideoPlayer.java  VideoPlayer.java
app/src/main/java/com/smart/airplayserver/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/smart/airplayserver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
